--- a/ping-coming-soon-page-master/index.html
+++ b/ping-coming-soon-page-master/index.html
@@ -33,17 +33,32 @@
         <p>Subscribe and get notified</p>
       </div>
       <div class="division">
-          <input type="email" spellcheck="false" onkeyup="redbox()" class="input invalid" id="email" placeholder="Your email address..." />
-          <button type="submit" id="submit">Notifye Me</button>
-          <div id="err" class="err"></div>
+        <input
+          type="email"
+          spellcheck="false"
+          onkeyup="redbox()"
+          class="input invalid"
+          id="email"
+          placeholder="Your email address..."
+        />
+        <button type="submit" id="submit">Notifye Me</button>
+        <div id="err" class="err"></div>
       </div>
       <div class="demo">
         <img src="./images/illustration-dashboard.png" alt="Demo." />
       </div>
       <div class="social-media">
-        <a href="#" class="icon"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="icon"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="icon"><i class="bx bxl-instagram"></i></a>
+        <a
+          href="https://web.facebook.com/profile.php?id=100083324507239"
+          class="icon"
+          ><i class="bx bxl-facebook"></i
+        ></a>
+        <a href="https://x.com/thisizneo" class="icon"
+          ><i class="bx bxl-twitter"></i
+        ></a>
+        <a href="https://www.instagram.com/thisizneo" class="icon"
+          ><i class="bx bxl-instagram"></i
+        ></a>
       </div>
       <div class="copyright">&copy; Copyright Ping. All rights reserved.</div>
     </div>
