--- a/Social_links_profile/index.html
+++ b/Social_links_profile/index.html
@@ -7,28 +7,29 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  
 </head>
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+  <main>
+    <img src="./assets/images/avatar-jessica.jpeg" alt="avatar">
+    <h1>Jessica Randall</h1>
+    <span>London, United Kingdom</span>
+    <p>"Front-end developer and avid reader."</p>
+    <div class="btns">
+      <button class="btn">GitHub</button>
+      <button class="btn">Frontend Mentor</button>
+      <button class="btn">LinkedIn</button>
+      <button class="btn">Twitter</button>
+      <button class="btn">Instagram</button>
+    </div>
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+  </main>
   
-  <div class="attribution">
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://github.com/ThisIzNeo" target="_blank">ThisIzNeo</a>.
+  </footer>
 </body>
 </html>
