--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -2,32 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
+  <main>
+    <div class="card">
+      <div class="currency">
+        <img src="./images/image-equilibrium.jpg" alt="Equilibrium">
+        <img src="./images/icon-view.svg" alt="eye">
+      </div>
+      <h5>Equilibrium #3429</h5>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
+      <div class="division">
+        <div class="value"><img src="./images/icon-ethereum.svg" alt="icon-ethereum"><div>0.041 ETH</div></div>
+        <div class="date"><img src="./images/icon-clock.svg" alt="clock"><p>3 days left</p></div>
+      </div>
+      <div class="line"></div>
+      <div class="user">
+        <img src="./images/image-avatar.png" alt="avatar">
+        <p>Creation of <span>Jules Wyvern</span></p>
+      </div>
+    </div>
+  </main>
   
-  Creation of Jules Wyvern
+  
 
-  <div class="attribution">
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://github.com/ThisIzNeo" target="_blank">ThisIzNeo</a>.
+  </footer>
 </body>
 </html>
